# Config2Class

./: README.md  config.py  current_repodata.json  dev.ipynb  main.py  main2.py  out.py  pyproject.toml
config2class/: __init__.py  __main__.py  code_abstraction.py  constructor.py  entrypoint.py  main.py  process.py
config2class/_core/: code_abstraction.py  constructor.py  entrypoint.py
config2class/_service/: api_funcs.py  backend.py  pid_coordination.py
config2class/_utils/: parser.py
config2class/api/: base.py  construct.py  hydra.py
config2class/service/: api_funcs.py  config.py  handler.py  pid_coordination.py
config2class/utils/: __init__.py  filesystem.py  logging.py  parser.py  replacement.py
example/: example.toml  example.yaml  example_flat.toml  example_flat.yaml  example_token.yaml
example/config_dir/: example.json  example_flat.json
example/hydra/hydra/: hydra.yaml
example/hydra/training/: train_dyna.yaml
test/: __init__.py  fixture.py  test.py  test_folder.py  utils.py
usage_examples/: config.py  hydra_integration.py
